# ai-log-mcp-server

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  WORKFLOW.md  pyproject.toml
docs/: BUILD-FROM-ZERO.md  DEMO.md  PRD.md
scripts/: smoke_stdio.py
src/ai_log_mcp/: __init__.py  check.py  config.py  rest_client.py  server.py  tools.py
tests/: conftest.py  test_config.py  test_integration.py  test_rest_client.py  test_tools_chat.py  test_tools_gateway.py  test_tools_readonly.py  test_tools_upload.py
