[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-log-mcp"
version = "0.0.1"
description = "MCP server wrapping the AI log analysis platform's REST API (stdio)."
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27",
]

[project.scripts]
ai-log-mcp = "ai_log_mcp.server:main"
ai-log-mcp-check = "ai_log_mcp.check:main"

[tool.setuptools.packages.find]
where = ["src"]
